--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ username: jekyllt
 repo: jasper
 branch: master
 relative_source: ../jasper/
-destination: ../jasper-pages/
+destination: ./_site/
 production_url:  https://jekyllt.github.io/jasper/
 source_url:  https://github.com/jekyllt/jasper/
 
